--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "UNLICENSED",
   "devDependencies": {
+    "@types/lodash": "^4.14.165",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
     "eslint": "^7.15.0",
@@ -16,6 +17,7 @@
     "typescript": "^4.1.2"
   },
   "scripts": {
+    "build": "tsc -p tsconfig.json",
     "test": "jest",
     "lint:check": "eslint . --ext \".js,.ts\" --max-warnings 0"
   }
